Make sure `pre` blocks are unaffected by any future `word-wrap` rules

--- a/src/assets/sass/modules/_typography.scss
+++ b/src/assets/sass/modules/_typography.scss
@@ -112,6 +112,7 @@ pre {
     @include adjust-font-size-to(12px, 0.9);
     @include border-radius(0.25em); // 3px / 12px
 
+    word-wrap: normal;
     overflow-x: auto;
     margin: 1.0833333em 0; // 13px / 12px
     border: 1px solid lighten($color-border, 9%);
